--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@ x = 300
 y = 300
 size = 50
 color = (255,0,0)
-gravity = 1
-speed = 0.1
-vector = [0,0]
+
 
 while 1:
   pygame.time.delay(20) #установка задержки между кадрами
   events = pygame.event.get() #запись всех событий в текущем кадре в переменную events
-  keys = pygame.key.get_pressed()
+  keys = pygame.key.get_pressed() #запись всех нажатых кнопок в текущем кадре в переменную keys
 
   for ev in events: #цикл по всем событиям в переменной events
     print(ev)
@@ -53,31 +51,17 @@ while 1:
       if ev.button == 5:#вращение колесика назад
         pass 
   if keys[273]:#стрелка вверх
-    vector[1] -= speed
+    pass
   if keys[274]:#стрелка вниз
-    vector[1] += speed
+    pass
   if keys[275]:#стрелка вправо
-    vector[0] += speed
+    pass
   if keys[276]:#стрелка влево
-    vector[0] -= speed
+    pass
   if keys[32]:#клавиша пробел
-    vector = [0,0]
+    pass
 
-  x += vector[0]
-  y += vector[1]
-  vector = [vector[0]*0.99, vector[1]*0.99]
-  if y<size:
-    vector[1] = -vector[1]
-    y = size
-  if x<size:
-    vector[0] = -vector[0]
-    x = size
-  if y>height-size:
-    vector[1] = -vector[1]
-    y = height-size
-  if x > width-size:
-    vector[0] = - vector[0]
-    x = width-size
+
 
   window.fill((100,100,255)) #заполнение экрана черным цветом(заодно стирается все старое что было нарисовано)
   pygame.draw.circle(window, color, (int(x),int(y)), size) #отрисовка круга с заданными параметрами
