--- a/index.html
+++ b/index.html
@@ -8,87 +8,65 @@
     <div> jasdghop </div>
     	<pre><code class="language-python">
 import pygame, sys
+# импортирование модулей 
+# pygame - основной дял создания игр
+# sys - модуль для работы с системой, на данный момент с помощью него выходим из игры
 from random import randint as r
+# импортируем функцию randint и записываем ее в переменную r
+# теперь r(a,b) выдает случайное число от a до b
+
 pygame.init()
 
-class Hero():
-  def __init__(self):
-    self.x = r(100,300)
-    self.y = r(100,300)
-    self.size = r(15,40)
-    self.color = ( r(0,255),r(0,255),r(0,255) )
-    self.vector = [ r(-5,5), r(-5,5)]
-  def update(self):
-    self.move()
-    self.draw()
-  def move(self):
-    self.x += self.vector[0]
-    self.y -= self.vector[1]
+screenSize = width, height = 800, 600
+# создаем переменную screenSize, которая является кортежем (800, 600)
+# а так же две переменных width = 800 и height = 600
+window = pygame.display.set_mode(screenSize)
+#создаем переменную window, которая является игровым окошком
 
-    if self.x<self.size:
-      self.vector[0]= -self.vector[0]
-      self.x = self.size
-    if self.x > width-self.size:
-      self.vector[0] = - self.vector[0]
-      self.x = width-self.size
-    if self.y < self.size:
-      self.vector[1] = -self.vector[1]
-      self.y = self.size
-    if self.y > height - self.size:
-      self.vector[1] = -self.vector[1]
-      self.y = height - self.size
-  def draw(self):
-    pygame.draw.circle(window, self.color, (int(self.x),int(self.y)), self.size) #отрисовка круга с заданными параметрами
+#Начальные характеристики персонажа
+x = 300
+y = 300
+size = 50
+color = (255,0,0)
 
 
-def checkKeys():
-    global vector
-    global s
-    keys = pygame.key.get_pressed() #запись всех нажатых кнопок в текущем кадре в переменную keys
-    if keys[273]:#стрелка вверх
-      vector[1] += s
-    if keys[274]:#стрелка вниз
-      vector[1] -= s
-    if keys[275]:#стрелка вправо
-      vector[0] += s
-    if keys[276]:#стрелка влево
-      vector[0] -= s
-    if keys[32]:#клавиша пробел
-      vector = [0,0]
-
-def checkEvents():
+while 1:
+  pygame.time.delay(20) #установка задержки между кадрами
   events = pygame.event.get() #запись всех событий в текущем кадре в переменную events
+  keys = pygame.key.get_pressed()
+
   for ev in events: #цикл по всем событиям в переменной events
-    # print(ev)
+    print(ev)
     if ev.type == 12:
       sys.exit()
     if ev.type == 5: #клавиши мыши и колесико
       if ev.button == 1:#клик левой кнопкой мыши
-        pass
+        pass 
       if ev.button == 2:#клик колесом кнопкой мыши
-        pass
+        pass 
       if ev.button == 3:#клик правой кнопкой мыши
         pass 
       if ev.button == 4:#вращение колесика вперед
         pass 
       if ev.button == 5:#вращение колесика назад
         pass 
+  if keys[273]:#стрелка вверх
+    pass 
+  if keys[274]:#стрелка вниз
+    pass
+  if keys[275]:#стрелка вправо
+    pass
+  if keys[276]:#стрелка влево
+    pass
+  if keys[32]:#клавиша пробел
+    pass
 
 
-
-screenSize = width, height = 400,400
-window = pygame.display.set_mode(screenSize)
-s = 0.1
-char = Hero()
-balls = [Hero() for i in range(50)]
-while 1:
-  pygame.time.delay(10)
-  checkKeys()
-  checkEvents()
-  window.fill((100,100,255))
-  for ball in balls:
-    ball.update()
+  window.fill((0,0,0))
+  pygame.draw.circle(window, color, (x,y), size)
   pygame.display.update()
+  
+
 
 
 </code></pre>
