added js projects

--- a/index.html
+++ b/index.html
@@ -66,9 +66,15 @@ while 1:
   pygame.draw.circle(window, color, (x,y), size)
   pygame.display.update()
   
+  
 
 
 
 </code></pre>
+  <div class = "buttonContainer">
+    <input type = "button" onclick="window.location.href = 'sorting.html';" value = "Sorting"> 
+    <input type = "button" onclick="window.location.href = 'tiles.html';" value = "Tiles"> 
+    <input type = "button" onclick="window.location.href = 'pixelization.html';" value = "Pixelization"> 
+  </div>
   </body>
 </html>
