head another style

--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
       </a>
 
 
-      <div class = "link"> 
-        <p> Проекты <p>
-      </div>
+      <a class = "link"> 
+        <p> Проекты </p>
+      </a>
 
 
-      <div class = "link"> 
-        <p> Скетчи <p>
-      </div>
+      <a class = "link"> 
+        <p> Скетчи </p>
+      </a>
 
 
     </div>
-    <div class = "index">
-      <p>default page</p>
-     </div>
+
   </div>
 
 <!--   <div class = "buttonContainer">
