--- a/processing.html
+++ b/processing.html
@@ -10,6 +10,7 @@
   <div class = "page">
     <div class = "guidelist"> 
       <div class = "item">
+        <a href="https://processing.org/reference/">Ссылка на весь список команд (на английском)</a>
         <pre><code class="language-processing">
 float a; //создание переменной дробного типа
 int b; //создание переменной целого типа
