--- a/pixelization.html
+++ b/pixelization.html
@@ -10,12 +10,17 @@
 
     <body>
         <div>
+        <input id = "urlArea" type="text" style = "width:90%;"> 
+        <input id = "loadButton" type="button" style = "width:10%;" value = "load"> 
+    </div>
+        <div>
             <canvas id="canvas">
             
             </canvas> 
         </div>
         <div>
             <input type="range" id="multiplier" min="5" max="80" step="1" value="50">
+            <span id = "sliderValue"></span> 
         </div>
         <div>
             <canvas id="canvas2">
